# fancy

./: .hlint.yaml  build.sh  fancy.cabal  hie.yaml
.github/workflows/: haskell-ci.yml
test-suites/checks/: Main.hs
