cabal-version: 3.0
name: fancy
version: 0.1.0.0
author: Ignat Insarov
maintainer: kindaro@gmail.com
synopsis: A predule for Fancy Haskell.
tested-with: GHC == 8.10.7, GHC == 9.0.2, GHC == 9.2.2

common commons
  build-depends: base, base-unicode-symbols, containers
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    BlockArguments
    DataKinds
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    MultiParamTypeClasses
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    UnicodeSyntax

  ghc-options: -Wall -Wextra -Werror -Wno-unticked-promoted-constructors -Wno-star-is-type

library
  import: commons
  hs-source-dirs: library
  exposed-modules: Prelude.Fancy
