cabal-version: 3.0
name: fancy
version: 0.1.0.0
author: Ignat Insarov
maintainer: kindaro@gmail.com
synopsis: A predule for Fancy Haskell.
tested-with: GHC == 8.10.7, GHC == 9.0.2, GHC == 9.2.2

common commons
  build-depends:
    , base
    , base-unicode-symbols
    , bytestring
    , containers
    , text ^>= 2
    , witherable

  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    BlockArguments
    DataKinds
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    MultiParamTypeClasses
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    UnicodeSyntax

  ghc-options: -Wall -Wextra -Werror -Wno-unticked-promoted-constructors -Wno-star-is-type

library
  import: commons
  hs-source-dirs: library
  exposed-modules:
    Prelude.Fancy
    Prelude.Fancy.Arithmetic
    Prelude.Fancy.Assorti
    Prelude.Fancy.Curry
    Prelude.Fancy.Fork
    Prelude.Fancy.Polymorphic
    Prelude.Fancy.Polymorphic.Bloom
    Prelude.Fancy.Polymorphic.Burst
    Prelude.Fancy.Polymorphic.Polymorph
    Prelude.Fancy.Polymorphic.Shrivel
    Prelude.Fancy.Polymorphic.Warp

  other-modules:
    Prelude.Fancy.Curry.Checks
    Prelude.Fancy.Polymorphic.Bloom.Checks
    Prelude.Fancy.Polymorphic.Burst.Checks
    Prelude.Fancy.Polymorphic.Polymorph.Checks
    Prelude.Fancy.Polymorphic.Shrivel.Checks
    Prelude.Fancy.Polymorphic.Warp.Checks
